# fgroup

./: .gitignore  LICENSE  README.md  pyproject.toml
example/: linux-config.yaml  linux-output.json  script.py  windows-config.yaml  windows-output.json
fgroup/: __init__.py  __main__.py  _test.py  file.py  filetree.py  formatter.py  grouper.py  util.py
scripts/: __init__.py
